<resources>
    <string name="app_name">HorseApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="profile">profile</string>
    <string name="favorite">favorite</string>
    <string name="home">home</string>
    <string name="sign_out">sign out</string>
    <string name="add_promtoin">add Promtoin</string>
    <string name="delete_question">Are you sure you want to sign out?</string>
    <string name="delete_question_account">Are you sure you want to Delete Account?</string>

    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="your_name">your Name</string>
    <string name="default_notification_channel_id">notification</string>
    <string name="add_Promtoin_id" translatable="false">add_Promtoin_id</string>
    <string name="my_list">my List</string>
    <string name="dark_theme_preference_value">darkTheme</string>
    <string name="light_theme_preference_value">lightTheme</string>
    <string name="system_theme_preference_value">systemTheme</string>
    <string name="theme_preferences_key" translatable="false">keyPrefrence</string>
    <string name="dark_theme_description" translatable="false">darkThemeDescription</string>
    <string name="light_theme_description" translatable="false">lightThemeDescription</string>
    <string name="system_theme_description" translatable="false">systemThemeDescription</string>
    <string name="setting">setting</string>
    <string name="delete_account">DELETE Account</string>
    <string name="add_yor_promotion">add yor promotion</string>
    <string name="name">Name</string>
    <string name="add_promotion">Add Promotion</string>
    <string name="content">Content</string>
    <string name="my_list_promotion">My List Promotion</string>
    <string name="add">add</string>
    <string name="your_city">your City</string>
    <string name="save">save</string>
</resources>